<resources>
    <string name="app_name">TryClubs</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="next">Next</string>

    <string name="timeline">Timeline</string>
    <string name="following_clubs">Favoring Clubs</string>
    <string name="following_events">Following Events</string>
    <string name="create_club">Create a Club</string>
    <string name="my_club">Manage My Club</string>
    <string name="logout">Logout</string>

    <string name="username_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="asaguest">Continue as a Guest</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="noAccount">"Don't have an account?"</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="alreadyhave_account">Already have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete my Account</string>
    <string name="enter_username">Enter your username (Optional)</string>
    <string name="click_gary">Click Gary to Log In</string>
    <string name="skip">Skip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="firebase_users_tag">users</string>
    <string name="firebase_clubs_tag">clubs</string>
    <string name="firebase_following_clubs_tag">following_clubs</string>
    <string name="firebase_following_events_tag">following_events</string>
    <string name="firebase_clubmembers_tag">members</string>
    <string name="firebase_purpose_tag">purpose</string>
    <string name="firebase_my_club_tag">my_clubs</string>
    <string name="firebase_tags_tag">tags</string>
    <string name="firebase_events_tag">events</string>
    <string name="search">Search...</string>

    <string name="firebase_lower_case_club_name_tag">lower_case_club_name</string>
    
    <string name="search_page_marquee">Hint: Try to input #academic, #art, #business, #comedy, #community_service, #culture, #dance, #engineering, #ethnic, #gaming, #greek, #lifestyle, #martial_arts, #media, #medical, #music, #performing_arts, #programming, #religion, #science, #self_improvement, #social, #sports, #technology</string>

</resources>
